tests/samples/valid/constant_array_length.pn
const MAX_LEN: usize = 4;

const GLOBAL_BUFFER: [MAX_LEN]i32 = [1, 2, 3, 4];

const BUFFER_HOLDER_SIZE: usize = |:BufferHolder|;

struct BufferHolderTransmuter
{
	bytes: [BUFFER_HOLDER_SIZE]u8,
}

struct BufferHolder
{
	buffer: [MAX_LEN]i32,
	flags: [NUM_FLAGS]i32,
}

const NUM_FLAGS: usize = 2 * MAX_LEN;

fn foo()
{
	var data: [MAX_LEN]u8;
}

const GRID: [MAX_LEN][MAX_LEN]i32 = [
	[1, 2, 3, 4],
	[5, 6, 7, 8],
	[1, 2, 3, 4],
	[5, 6, 7, 8],
];
