tests/samples/invalid/expression_in_array_length.pn
const MAX_LEN: usize = 100;

struct PairHolder
{
	data: [2 * MAX_LEN]i32,
}

struct PairHolderTransmuter
{
	bytes: [|:PairHolder|]u8,
}

struct Negativity
{
	data: [-1]i32,
}
